@@ -75,11 +75,7 @@ public class Chant_Fertility extends Chant
 			   ||(mate.charStats().getStat(CharStats.STAT_GENDER)==('F')))
 			&&((myChar.charStats().getStat(CharStats.STAT_GENDER)==('M'))
 			   ||(myChar.charStats().getStat(CharStats.STAT_GENDER)==('F')))
-			&&((myChar.charStats().getMyRace().ID().equals("Human"))
-			   ||(mate.charStats().getMyRace().ID().equals("Human"))
-			   ||(mate.charStats().getMyRace().ID().equals(myChar.charStats().getMyRace().ID())))
-			&&(myChar.charStats().getMyRace().fertile())
-			&&(mate.charStats().getMyRace().fertile())
+			&&(mate.charStats().getMyRace().canBreedWith(myChar.charStats().getMyRace()))
 			&&(myChar.location()==mate.location())
 			&&(myChar.fetchWornItems(Wearable.WORN_LEGS|Wearable.WORN_WAIST,(short)-2048,(short)0).size()==0)
 			&&(mate.fetchWornItems(Wearable.WORN_LEGS|Wearable.WORN_WAIST,(short)-2048,(short)0).size()==0))
