@@ -66,7 +66,7 @@ public class Chant_SenseLife extends Chant
 			MOB M=R.fetchInhabitant(i);
 			if((M!=null)
 			&&(!CMLib.flags().isGolem(M))
-			&&(M.charStats().getMyRace().fertile())
+			&&(M.charStats().getMyRace().canBreedWith(M.charStats().getMyRace()))
 			&&(M!=mob))
 				return true;
 		}
