@@ -60,11 +60,7 @@ public class Play_Ballad extends Play
 			   ||(mate.charStats().getStat(CharStats.STAT_GENDER)==('F')))
 			&&((myChar.charStats().getStat(CharStats.STAT_GENDER)==('M'))
 			   ||(myChar.charStats().getStat(CharStats.STAT_GENDER)==('F')))
-			&&((myChar.charStats().getMyRace().ID().equals("Human"))
-			   ||(mate.charStats().getMyRace().ID().equals("Human"))
-			   ||(mate.charStats().getMyRace().ID().equals(ID())))
-			&&(myChar.charStats().getMyRace().fertile())
-			&&(mate.charStats().getMyRace().fertile())
+			&&(myChar.charStats().getMyRace().canBreedWith(mate.charStats().getMyRace()))
 			&&(myChar.location()==mate.location())
 			&&(myChar.fetchWornItems(Wearable.WORN_LEGS|Wearable.WORN_WAIST,(short)-2048,(short)0).size()==0)
 			&&(mate.fetchWornItems(Wearable.WORN_LEGS|Wearable.WORN_WAIST,(short)-2048,(short)0).size()==0)
