@@ -24,6 +24,16 @@ This skill allows the player to remove any behaviors, such as aggressiveness \
 or the tendency to roam around, or other behaviors from the target caged or \
 bound mob.
 
+HUSBAND=ANIMAL_HUSBANDRY
+ANIMALHUSBANDRY=ANIMAL_HUSBANDRY
+ANIMAL_HUSBANDRY=<ABILITY>\
+Usage    : HUSBAND [MOB NAME] [MOB NAME]\n\r\
+Example  : husband bull cow\n\r\
+This skill allows the player to coax two animals on his or her own property to \
+reproduce.  If successful, the female animal will be pregnant, and some time later, \
+will give birth to a baby.  This skill can also be used to tell if an animal is \
+pregnant -- just select the female mob twice.
+
 ANIMALSELL=ANIMAL_TRADING
 ASELL=ANIMAL_TRADING
 ANIMALTRADING=ANIMAL_TRADING
